eicb-p1/src/test/testcases/errors/p1_public/task_priv_5/missing_semicolon_record_err.syn.mavl
record MyRecord {
	var int x;
	val int y
}